trying to set up a login page

--- a/ENTP_Project/appsettings.json
+++ b/ENTP_Project/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Auth0": {
+    "Domain": "dev-y6sgst5cqueqdc0x.us.auth0.com",
+    "ClientId": "G9wzmDv6hr2X8maAKu2IQzZQoe3Yrlra"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
