trying to set up a database

--- a/ENTP_Project/appsettings.json
+++ b/ENTP_Project/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=FitnessProject.db"
+  },
   "Auth0": {
     "Domain": "dev-y6sgst5cqueqdc0x.us.auth0.com",
     "ClientId": "G9wzmDv6hr2X8maAKu2IQzZQoe3Yrlra"
