--- a/ENTP_Project/appsettings.json
+++ b/ENTP_Project/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./Data/FitnessProject.db"
+    "DefaultConnection": "Data Source=FitnessProject.db"
   },
   "Auth0": {
     "Domain": "dev-y6sgst5cqueqdc0x.us.auth0.com",
