attempting to post and get data from database

--- a/ENTP_Project/appsettings.json
+++ b/ENTP_Project/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=FitnessProject.db"
+    "Database": "Data Source=FitnessProject.db"
   },
   "Auth0": {
     "Domain": "dev-y6sgst5cqueqdc0x.us.auth0.com",
@@ -9,6 +9,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
