--- a/ENTP_Project/ENTP_Project.csproj
+++ b/ENTP_Project/ENTP_Project.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     <PackageReference Include="Auth0.ManagementApi" Version="7.29.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
