--- a/ENTP_Project/ENTP_Project.csproj
+++ b/ENTP_Project/ENTP_Project.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     <PackageReference Include="Auth0.ManagementApi" Version="7.29.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.3" />
+    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
