--- a/ENTP_Project/ENTP_Project.csproj
+++ b/ENTP_Project/ENTP_Project.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="9.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
